eureka-server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment
  labels:
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: eureka-server:local
          ports:
            - containerPort: 8761
#          env:
#            - name: spring.mvc.servlet.path
#              value: /eureka-service
#            - name: DATASOURCE_HOST
#              value: 192.168.1.101
